--- a/style.css
+++ b/style.css
@@ -3,3 +3,38 @@ body {
   height: 100%;
   margin: 0;
 }
+h1 {
+  color: black;
+  text-align: center;
+}
+
+nav {
+  text-align: center;
+}
+
+a {
+  text-align: center;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+figure {
+  text-align: center;
+}
+
+figcaption {
+  font-size: 10pt;
+}
+
+p {
+  text-align: center;
+  column-width: 800px;
+}
+
+div {
+  text-align: center;
+  float: left;
+  width: 25%;
+  background-color: blanchedalmond;
+
+}
